Poland and PRF....what....

--- a/localisation/KR_American_Union_State_l_english.yml
+++ b/localisation/KR_American_Union_State_l_english.yml
@@ -338,7 +338,7 @@ USA_exiled_CAN:0 "Canada host's the exiled USA government"
 THE_SHOW_TRIALS:0 "The Show Trials"
 TEX_NEUTRAL:0 "The American Union State remains neutral"
 TEX_SEND_VOL_FRA:0 "The AUS sends voluntaries to Germany"
-TEX_SEND_VOL_GER:0 "The AUS sends voluntaries to ss"
+TEX_SEND_VOL_GER:0 "The AUS sends voluntaries to SS"
 TEX_WAR_FRA:0 "The AUS declares war to the commies"
 TEX_NE_DEM:0 "AUS demands New England"
 LONG_DOCTRINE:0 "Long Doctrine"
@@ -666,14 +666,14 @@ unionstate.220.t:0 "Mexicans Refuse"
 unionstate.220.d:0 "The Mexicans have refused to sign a genius treaty. We should have expected such stupidity from the Mexicans."
 unionstate.220.a:0 "Stupid Mexicans"
 unionstate.221.t:0 "War in Central America"
-unionstate.221.d:0 "War has erupted in Central America between the godless syndicalists in centroamerica and the United Provinces of Central America. Many in our government are suggesting that we send both men and supplies to the United Provinces in order to stop the spread of syndicalism. "
+unionstate.221.d:0 "War has erupted in Central America between the godless syndicalists in Centroamérica and the United Provinces of Central America. Many in our government are suggesting that we send both men and supplies to the United Provinces in order to stop the spread of syndicalism. "
 unionstate.221.a:0 "Guns and Men to stop Syndicalism"
 unionstate.221.b:0 "They can handle things on their own"
 unionstate.222.t:0 "Aid from the Americas"
-unionstate.222.d:0 "The Americans have sent us aid and support in order to help us stop syndicalism. More over a number of American Volunteers have arrived ready to help us fight Centroamerica!"
+unionstate.222.d:0 "The Americans have sent us aid and support in order to help us stop syndicalism. More over a number of American Volunteers have arrived ready to help us fight Centroamérica!"
 unionstate.222.a:0 "Great!"
 unionstate.223.t:0 "Central American War is over"
-unionstate.223.d:0 "The Central American War is over and regardless of the outcome our men have gained experience in fighting against the godless syndicalists in Central Ameirca."
+unionstate.223.d:0 "The Central American War is over and regardless of the outcome our men have gained experience in fighting against the godless syndicalists in Central America."
 unionstate.223.a:0 "We have learned something"
 unionstate.224.t:0 "Treaty with America?"
 unionstate.224.d:0 "The United states have come with a treaty to improve relations between our two nations. Such a treaty will improve the trade relations and offer a guarantee of protection for United Provinces. It would be foolish to say no to such an arrangement but others fear binding ourselves to the Americans. "
