--- a/localisation/KR_Baltic_Duchy_l_english.yml
+++ b/localisation/KR_Baltic_Duchy_l_english.yml
@@ -372,7 +372,7 @@ BAT_Fed3_desc:0 "We promised free elections, and we must fulfil the promise."
 BAT_Fed4:0 "Baltic Trade"
 BAT_Fed4_desc:0 "The new democratic Baltic state is rife for trade domination in the Baltic Sea. Our new political course will be beneficial to the merchant class and our port cities, so we must develop them to use this advantage to its fullest."
 BAT_Fed5:0 "Independence Referendum"
-BAT_Fed5_desc:0 "We never planned to break our ties with Germany, but more and more people are demanding the Baltic Federation to become an independent state. We have found a compromise - an independence referendum. Of course, even if the majority is in favor of independence, there's no telling whether the Kaiser will approve."
+BAT_Fed5_desc:0 "We never planned to break our ties with Germany, but more and more people are demanding the Baltic Federation to become an independent state. We have found a compromise - an independence referendum. Of course, even if the majority is in favour of independence, there's no telling whether the Kaiser will approve."
 BAT_Education:0 "Education Reform"
 BAT_Education_desc:0 "The large Latvian and Estonian contingent in the Baltic Landtag is demanding for comprehensive education reform. Latvian and Estonian need to be accepted as secondary languages and the discrimination against the local Balts in schools must stop. Should we approve?"
 BAT_Press:0 "A Free Press?"
@@ -386,7 +386,7 @@ BAT_Lib3_desc:0 "Germans, Balts, Estonians and Russians - we are all the same. W
 BAT_Lib4:0 "Economic Liberalisation"
 BAT_Lib4_desc:0 "The liberal faction believes that the state must interfere as little as possible in the affairs of the economy, and this outlook has attracted lots of private investment into our nation. The economy must grow."
 BAT_Lib5:0 "Independence Referendum"
-BAT_Lib5_desc:0 "We never planned to break our ties with Germany, but more and more people are demanding the Baltic Federation to become an independent state. We have found a compromise - an independence referendum. Of course, even if the majority is in favor of independence, there's no telling whether the Kaiser will approve."
+BAT_Lib5_desc:0 "We never planned to break our ties with Germany, but more and more people are demanding the Baltic Federation to become an independent state. We have found a compromise - an independence referendum. Of course, even if the majority is in favour of independence, there's no telling whether the Kaiser will approve."
 BAT_ERP:0 "Economical Recovery Plan"
 BAT_ERP_desc:0 "The crisis known as Black Monday has caused many troubles for our economy. More than fifty thousand people lost their jobs at the end of first day. We must do something, and our ministers are already preparing a plan to save our economy."
 BAT_ERP_Gov1:0 "Government Intervention"
@@ -444,7 +444,7 @@ BAT_Army_FortBal_desc:0 "Our workers are too slow. Maybe, if we create even more
 BAT_Army_FortComplete:0 "New Ostwall Line"
 BAT_Army_FortComplete_desc:0 "The new Ostwall Line is complete. Now, our borders are safe and strong. We do not need to fear the Russians."
 BAT_RUS_INT1:0 "Russification"
-BAT_RUS_INT1_desc:0 "The vile germans are no longer our masters. Russia has shown interest in our new state. We should strengthen our ties with them."
+BAT_RUS_INT1_desc:0 "The vile Germans are no longer our masters. Russia has shown interest in our new state. We should strengthen our ties with them."
 BAT_RUS_INT2:0 "Baltic German Question"
 BAT_RUS_INT2_desc:0 "Baltic Germans were always a minority in our state. What should we do with them?"
 BAT_RUS_INT3:0 "Introduce Russian Language"
@@ -498,7 +498,7 @@ BAT_fort:0 "Ostwall Fortifications Network"
 BAT_politic:0 "Political Path"
 BAT_economy:0 "Economical Recovery Plan"
 BAT_progerman:0 "Pro-German policy"
-BAT_fed:0 "Pro-baltic policy"
+BAT_fed:0 "Pro-Baltic policy"
 BAT_red:0 "Left-Wing seize power"
 BAT_RUS_PRI:0 "Russophiles Coup"
 BAT_RUS_PUP3:0 "Forced Russian Language"
