--- a/localisation/KR_Carribean_Federation_l_english.yml
+++ b/localisation/KR_Carribean_Federation_l_english.yml
@@ -10,8 +10,8 @@ CAF_social_conservative_party:0 "PU"
 CAF_authoritarian_democrat_party:0 "PU"
 CAF_paternal_autocrat_party:0 "MJ"
 CAF_national_populist_party:0 "MJ"
-CAF_radical_socialist_party_long:0 "Syndicalist Progressivist Movement"
-CAF_syndicalist_party_long:0 "Syndicalist Progressivist Movement"
+CAF_radical_socialist_party_long:0 "Syndicalist Progressive Movement"
+CAF_syndicalist_party_long:0 "Syndicalist Progressive Movement"
 CAF_social_democrat_party_long:0 "Social Democratic Party"
 CAF_social_liberal_party_long:0 "Liberal Party"
 CAF_market_liberal_party_long:0 "Liberal Party"
@@ -101,7 +101,7 @@ caf.22.t:0 "Social Democratic Party wins"
 caf.22.d:0 "The SDP wins the elections!"
 caf.22.a:0 "Congratulations!"
 caf.23.t:0 "Patriotic Union Party wins!"
-caf.23.d:0 "The PU wins the elections! However, this party has 2 factions - liberal, Stubbs' faction, and reactionist, quasi-autocrat Derecourt's one."
+caf.23.d:0 "The PU wins the elections! However, this party has 2 factions - liberal, Stubbs' faction, and reactionary, quasi-autocrat Derecourt's one."
 caf.23.a:0 "Congratulations, Mr. Stubbs!"
 caf.23.b:0 "Congratulations, Mr. Derecourt!"
 caf.24.t:0 "No majority found after the election"
@@ -144,7 +144,7 @@ caf.32.t:0 "Social Democratic Party wins"
 caf.32.d:0 "The SDP wins the elections!"
 caf.32.a:0 "Congratulations!"
 caf.33.t:0 "Patriotic Union Party wins!"
-caf.33.d:0 "The PU wins the elections! However, this party has 2 factions - liberal, Stubbs' faction, and reactionist, quasi-autocrat Derecourt's one."
+caf.33.d:0 "The PU wins the elections! However, this party has 2 factions - liberal, Stubbs' faction, and reactionary, quasi-autocrat Derecourt's one."
 caf.33.a:0 "Congratulations, Mr. Stubbs!"
 caf.33.b:0 "Congratulations, Mr. Derecourt!"
 caf.34.t:0 "No majority found after the election"
@@ -187,7 +187,7 @@ caf.42.t:0 "Social Democratic Party wins"
 caf.42.d:0 "The SDP wins the elections!"
 caf.42.a:0 "Congratulations!"
 caf.43.t:0 "Patriotic Union Party wins!"
-caf.43.d:0 "The PU wins the elections! However, this party has 2 factions - liberal, Stubbs' faction, and reactionist, quasi-autocrat Derecourt's one."
+caf.43.d:0 "The PU wins the elections! However, this party has 2 factions - liberal, Stubbs' faction, and reactionary, quasi-autocrat Derecourt's one."
 caf.43.a:0 "Congratulations, Mr. Stubbs!"
 caf.43.b:0 "Congratulations, Mr. Derecourt!"
 caf.44.t:0 "No majority found after the election"
@@ -203,5 +203,5 @@ caf.46.t:0 "Independence day!"
 caf.46.d:0 "Independence Day, also known as the Day of the Federation, celebrations took place today all across the country. Most everyone has set aside their political differences to celebrate the traditions of the Caribbean Commonwealth with fireworks and parades."
 caf.46.a:0 "Let's celebrate!"
 caf.47.t:0 "Internal political situation in the Caribbean Commonwealth"
-caf.47.d:0 "Established in 1926, the Caribbean Federation is composed of former British and French colonies in the Caribbean. It's one of the most democratic countries among the Entente. In Caribbean policy there are three major parties. The strongest and at the forefront of politics is the Liberal Party of the Caribbean, created by a combination of leaders of the market- and social liberals. Their leader is the charismatic Francis Stanley Jackson who cooperates with Gordon Lethem and Amy Bailey. This party favours freedom of speech and free market economics. Patriotic Union Party is the most reactionist and authoritarian party, led by Frederick Stubbs and Frederick Derecourt. This party supports the idea of strong presidential rule and a return to tradition. This party is divided in two factions: Stubbs' 'democrats', which share some ideas with Liberals, the second faction is Derecourt's 'reactionists', who are nearly authoritarian who support almost total control by the state. Cipriani's Caribbean Social Democratic Party is the most leftist legal group. It has a similar view of the market with Syndicalists or even Totalists but supports large democratisation of the Federation. This party is led by Arthur Andrew Cipriani. Led by Dr. Cheddi Jagan and Fornes Burnham, the radical socialist Progressive Movement is an underground, illegal party that believes in the reign of trade unions instead of 'useless, greedy politicians'. Their strength is unknown but they surely have support from syndicalist states in Europe and America."
+caf.47.d:0 "Established in 1926, the Caribbean Federation is composed of former British and French colonies in the Caribbean. It's one of the most democratic countries among the Entente. In Caribbean policy there are three major parties. The strongest and at the forefront of politics is the Liberal Party of the Caribbean, created by a combination of leaders of the market- and social liberals. Their leader is the charismatic Francis Stanley Jackson who cooperates with Gordon Lethem and Amy Bailey. This party favours freedom of speech and free market economics. Patriotic Union Party is the most reactionary and authoritarian party, led by Frederick Stubbs and Frederick Derecourt. This party supports the idea of strong presidential rule and a return to tradition. This party is divided in two factions: Stubbs' 'democrats', which share some ideas with Liberals, the second faction is Derecourt's 'reactionists', who are nearly authoritarian who support almost total control by the state. Cipriani's Caribbean Social Democratic Party is the most leftist legal group. It has a similar view of the market with Syndicalists or even Totalists but supports large democratisation of the Federation. This party is led by Arthur Andrew Cipriani. Led by Dr. Cheddi Jagan and Fornes Burnham, the radical socialist Progressive Movement is an underground, illegal party that believes in the reign of trade unions instead of 'useless, greedy politicians'. Their strength is unknown but they surely have support from syndicalist states in Europe and America."
 caf.47.a:0 "Long live the Caribbean Commonwealth!"
