--- a/localisation/KR_La_Plata_l_english.yml
+++ b/localisation/KR_La_Plata_l_english.yml
@@ -63,11 +63,11 @@ ARG_paraguay_development_desc:0 "As full members of the union, we must now show 
 ARG_malvinas_integrate:0 "Integrate the Malvinas"
 ARG_malvinas_integrate_desc:0 "Since we seized the islands from the crumbing British Empire, it's legal status has been rather shady. Let us make the Malvinas an official territory of the Union"
 ARG_malvinas_deport:0 "Deport Kelpers to Patagonia"
-ARG_malvinas_deport_desc:0 "The so called Kelpers are naught but spies, who dream of returning to British Rule. Let us confiscate their lands and allow them to move elsewhere in the Union, perhaps even abroad; anywhere but the Malvinas"
+ARG_malvinas_deport_desc:0 "The so called Kelpers are nought but spies, who dream of returning to British Rule. Let us confiscate their lands and allow them to move elsewhere in the Union, perhaps even abroad; anywhere but the Malvinas"
 ARG_malvinas_citizenship:0 "Citizenship for Kelpers"
 ARG_malvinas_citizenship_desc:0 "The Kelpers are not much of a threat to us, and many don’t resent us that greatly, given how the Union shields them from Syndicalist and German rule. If we offer them citizenship, and make the Malvinas a full member of the union, we will be able to make our presence permanent. They can call the place Falklands if they wish so, for its La Plata's flag that is at the mast in Puerto Argentino"
 ARG_malvinas_develop:0 "Develop the Malvinas"
-ARG_malvinas_develop_desc:0 "The islands are still very much a barren wasteland, with naught but sheep and mountains mostly. Let us invest there, and make sure immigrants arrive in Puerto Argentino in ever greater numbers"
+ARG_malvinas_develop_desc:0 "The islands are still very much a barren wasteland, with nought but sheep and mountains mostly. Let us invest there, and make sure immigrants arrive in Puerto Argentino in ever greater numbers"
 ARG_malvinas_mine:0 "Natural Resources of the Malvinas"
 ARG_malvinas_mine_desc:0 "The Malvinas are rich with ore, and according some prospectors, even Oil! How could we possibly squander such amazing gifts from nature”?
 ARG_malvinas_dockyard:0 "Puerto Argentino's New Industrial Goals"
