--- a/localisation/KR_Piratini_l_english.yml
+++ b/localisation/KR_Piratini_l_english.yml
@@ -1,18 +1,16 @@
 ﻿l_english:
 
 ### Ideas ###
-
 PIR_bagual:0 "Tattered Spirit"
-PIR_bagual_desc:0 "A cult of offense arose in our reborn military, an élan based on the bravery of our soldiers, then and now"
+PIR_bagual_desc:0 "A cult of offence arose in our reborn military, an élan based on the bravery of our soldiers, then and now"
 PIR_mobility:0 "Offensive Mobility"
-PIR_mobility_desc:0 "Our Republic is based on the legacy our our fouding fathers, among these the military genious Giuseppe Garibaldi, whose Lavoro Famoso is a mark in the skill of battlefield mobility. Such legacy heavily influences the officers of our young Republic"
+PIR_mobility_desc:0 "Our Republic is based on the legacy our our founding fathers, among these the military genius Giuseppe Garibaldi, whose Lavoro Famoso is a mark in the skill of battlefield mobility. Such legacy heavily influences the officers of our young Republic"
 PIR_pioneers:0 "School of Aviation"
 PIR_pioneers_desc:0 "Our pilots are heavily trained before allowed to pilot our few modern warplanes. They will show their skill, in time"
 PIR_phoenixi:0 "Rio Grande Reborn"
 PIR_phoenixi_desc:0 "Our fate as a young nation relies on our bravery, our skill, and our will to defend the Second Piratini Republic against our enemies"
 PIR_csp:0 "Consolidated State Policies"
-PIR_csp_desc:0 "The goverment of the young state of Piratini has finally put together an efficent goverment plan in pratice, and is reaping benefits"
-
+PIR_csp_desc:0 "The government of the young state of Piratini has finally put together an efficient government plan in practice, and is reaping benefits"
 
 ### Parties ###
 PIR_social_democrat_party:0 "PDT"
@@ -43,11 +41,9 @@ PIR.1.a: "Partido Conservador - Bornhausen and Gomes da Silva"
 PIR.1.b: "Partido Republicano - Camargo and Munhoz da Rocha"
 PIR.1.c: "Partido Federal - Clotário Portugal and Barbosa Martins"
 
-
-### Focus Tree ###
-
+### Foci ###
 PIR_mil:0 "Newborn Armed Forces"
-PIR_mil2:0 "Organize the Riograndense Armed Forces"
+PIR_mil2:0 "Organise the Riograndense Armed Forces"
 PIR_army:0 "Artillery Battalions"
 PIR_doct:0 "Modern Combat Doctrine"
 PIR_eq:0 "Infantry Equipment Manufacturing"
@@ -66,7 +62,7 @@ PIR_para:0 "Divisões Paraquedistas"
 PIR_tattered_pride:0 "Complete Army Reform"
 PIR_phoenix:0 "Rio Grande Reborn"
 PIR_pp:0 "Government Rebuilding"
-PIR_good_govt:0 "Efficent Rule"
+PIR_good_govt:0 "Efficient Rule"
 PIR_consolidated_state_policies:0 "Consolidated State Policies"
 PIR_eco:0 "First Census of the Republic"
 PIR_infra:0 "Infrastructure Renewal"
@@ -75,14 +71,7 @@ PIR_manufact:0 "Rekindle Local Manufacturing"
 PIR_plan_goncalves:0 "Plan Gonçalves"
 PIR_hvyind:0 "Heavy Industry Incentives"
 PIR_education_reform:0 "Extensive Education Reform"
-PIR_manufact2:0 "Extensive Indusrialization Program"
+PIR_manufact2:0 "Extensive Industrialisation Program"
 PIR_armyind:0 "Military Industrial Contracts"
 PIR_mic:0 "Military Industrial Complex"
-
-
-
-
-
-
-
 
