--- a/localisation/KR_Transamur_l_english.yml
+++ b/localisation/KR_Transamur_l_english.yml
@@ -344,7 +344,7 @@ tram.87.e:0 "The army shall put an end to this chaotic democracy!"
 
 tram.90.t:0 "Yui Mitsuei dies"
 tram.90.d:0 "Today, our colonial governor, general Yui Mitsuei died in age of 79. These damned Japanese rats in Vladivostok Duma have already started a referendum to integrate in Japan and become a new prefecture of the glorious empire. "
-tram.90.a:0 "Does it mean we are no longer independendent?"
+tram.90.a:0 "Does it mean we are no longer independent?"
 
 tram.91.t:0 "Yui Mitsuei dies"
 tram.91.d:0 "Today, our governor in Trasamur, general Yui Mitsuei died in age of 79. Pro-Japanese politicians in Vladivostok Duma have decided to become a new prefecture of our empire. Shall we accept their deal?"
