--- a/localisation/KR_American_Civil_War_l_english.yml
+++ b/localisation/KR_American_Civil_War_l_english.yml
@@ -57,13 +57,13 @@ amcivwar.2.t:0 "Long Declares the United States a Dead Nation. The Rise of the A
 amcivwar.2.d:0 "The American Union State has declared independence from the United States."
 amcivwar.2.a:0 "Stand by the Republic"
 amcivwar.2.b:0 "Stand by the Country (Play the AUS)"
-amcivwar.3.t:0 "North Carolina, Florida, Arkansas and Lousiana Join the American Union State"
+amcivwar.3.t:0 "North Carolina, Florida, Arkansas and Louisiana Join the American Union State"
 amcivwar.3.d:0 "The four state legislatures have all voted to join the American Union State in its struggle. This will be a powerful addition to an already strong American Union State."
 amcivwar.3.a:0 "Damn"
 amcivwar.3000.t:0 "Virginia and Tennessee Join the American Union State"
 amcivwar.3000.d:0 "The legislatures of both Virgina and Tennessee have voted to join the American Union State. The problems within the US government have become too great to be ignored."
 amcivwar.3000.a:0 "Damn"
-amcivwar.3001.t:0 "North Carolina, Florida, Arkansas and Lousiana Have Joined the American Union State"
+amcivwar.3001.t:0 "North Carolina, Florida, Arkansas and Louisiana Have Joined the American Union State"
 amcivwar.3001.d:0 "The state legislatures have voted to join American Union State. They were welcomed with open arms as they would help in the struggle for a stronger more fiercely American America."
 amcivwar.3001.a:0 "Great"
 amcivwar.3002.t:0 "Virginia and Tennessee Have Joined the American Union State"
@@ -371,7 +371,7 @@ amcivwar.89.t:0 "Untapped Oil Reserves"
 amcivwar.89.d:0 "The AUS desperately needed oil for its air force and the government scavenged the fledgling country for any oil that it could find. After an exhaustive search several hundred barrels were gathered and handed over to the air force."
 amcivwar.89.a:0 "Black gold."
 amcivwar.90.t:0 "War Bonds"
-amcivwar.90.d:0 "The state needed to pay for the war and looked to its citizens to buy war bonds to support the government. People began spending what meager amounts of money they had to support the war effort."
+amcivwar.90.d:0 "The state needed to pay for the war and looked to its citizens to buy war bonds to support the government. People began spending what meagre amounts of money they had to support the war effort."
 amcivwar.90.a:0 "A blessing."
 amcivwar.91.t:0 "Coloured Units"
 amcivwar.91.d:0 "The racial tensions of the south did not mean that some African-Americans didn't decide to fight for the American Union State. They were initially turned away from recruiting stations but soon more were demanding the right to serve. The American Union forces could use the extra manpower but there was a fear that this could lead to racial tensions."
@@ -408,7 +408,7 @@ amcivwar.101.t:0 "Mass terror"
 amcivwar.101.d:0 "During the ongoing civil war some of our commanders started to use rather doubtful methods to permanently suppress civilian populations suspected of helping our mortal enemies. Such policies, even if they drastic, are necessary in these dark times."
 amcivwar.101.a:0 "War is war"
 amcivwar.102.t:0 "Rise of the CSA Militias"
-amcivwar.102.d:0 "The workers of Chicago, Pittsburg and Detroit regions have arisen to defend their freedom and rights from capitalist oppression."
+amcivwar.102.d:0 "The workers of Chicago, Pittsburgh and Detroit regions have arisen to defend their freedom and rights from capitalist oppression."
 amcivwar.102.a:0 "Rise my minions!"
 amcivwar.103.t:0 "Organisation of the Pennsylvania Militia"
 amcivwar.103.d:0 "The workers of Pennsylvania region have arisen to defend their freedom and rights from capitalist oppression."
