--- a/localisation/KR_Legation_Cities_l_english.yml
+++ b/localisation/KR_Legation_Cities_l_english.yml
@@ -14,11 +14,11 @@ INVEST_SEIZED_COMP:0 "Legation Cities Investments Seized"
 
 ### Parties ###
 LEC_totalist_party:0 "CCP"
-LEC_totalist_party_long:0 "Cities’ Communist Party"
+LEC_totalist_party_long:0 "Cities Communist Party"
 LEC_radical_socialist_party:0 "CRP"
-LEC_radical_socialist_party_long:0 "Cities’ Radical Party"
+LEC_radical_socialist_party_long:0 "Cities Radical Party"
 LEC_syndicalist_party:0 "CSP"
-LEC_syndicalist_party_long:0 "Cities’ Syndicalist Party"
+LEC_syndicalist_party_long:0 "Cities Syndicalist Party"
 LEC_social_democrat_party:0 "SDL"
 LEC_social_democrat_party_long:0 "Social Democratic League"
 LEC_social_liberal_party:0 "SLL"
@@ -32,7 +32,7 @@ LEC_authoritarian_democrat_party_long:0 "Imperial Party"
 LEC_paternal_autocrat_party:0 "CA"
 LEC_paternal_autocrat_party_long:0 "Concordia Association"
 LEC_national_populist_party:0 "CAC"
-LEC_national_populist_party_long:0 "Cities’ Administrative Committee"
+LEC_national_populist_party_long:0 "Cities Administrative Committee"
 
 ### Opinion Modifiers ###
 LEC_TRIAD_POWER:0 "Triads in Power"
@@ -247,7 +247,7 @@ legcities.22.d:0 "Following the 1926 German Intervention in China and the Treaty
 legcities.22.a:0 "Let the money flow..."
 
 legcities.28.t:0 "Seize foreign investments?"
-legcities.28.d:0 "Our armed forces have seized control over the rich and industrialized Legation cities with its large foreign investments. Several important members of the armed forces and few radical politicians suggest to seize control over foreign investments, basically to expropriate them, thus improve our fiscal conditions and deny our potential enemies additional profit. However, such act would definitively anger many important world powers, which will not look kindly to us denying them their rightful profits..."
+legcities.28.d:0 "Our armed forces have seized control over the rich and industrialised Legation cities with its large foreign investments. Several important members of the armed forces and few radical politicians suggest to seize control over foreign investments, basically to expropriate them, thus improve our fiscal conditions and deny our potential enemies additional profit. However, such act would definitively anger many important world powers, which will not look kindly to us denying them their rightful profits..."
 legcities.28.a:0 "Seize foreign investments!"
 legcities.28.b:0 "Seize investments and compensate foreign powers!"
 legcities.28.c:0 "This is too risky..."
