Correct borders and names for Russian-UBD border

--- a/localisation/KR_Victory_Points_l_english.yml
+++ b/localisation/KR_Victory_Points_l_english.yml
@@ -8,7 +8,7 @@ VICTORY_POINTS_191:0 "Vorbeckburg"
 VICTORY_POINTS_192:0 "Narvik"
 VICTORY_POINTS_241:0 "Wilhelmshaven"
 VICTORY_POINTS_306:0 "Smolensk"
-VICTORY_POINTS_310:0 "Dinaburg"
+VICTORY_POINTS_310:0 "Dvinsk"
 VICTORY_POINTS_321:0 "Rostock"
 VICTORY_POINTS_351:0 "Newcastle"
 VICTORY_POINTS_362:0 "Danzig"
