The CSA is now basically done!

--- a/localisation/KR_Combined_Syndicates_of_America_l_english.yml
+++ b/localisation/KR_Combined_Syndicates_of_America_l_english.yml
@@ -688,3 +688,91 @@ combinedsyndicates.214.a:0 "Gracias Camaradas!"
 combinedsyndicates.215.t:0 "Central American War is over"
 combinedsyndicates.215.d:0 "For good or for ill are volunteers have arrived back in America following the war in central America. Our soldiers seemed to have learned much fighting in Central America."
 combinedsyndicates.215.a:0 "Welcome Home"
+combinedsyndicates.216.t:0 "War against the United Provinces?"
+combinedsyndicates.216.d:0 "Centroamerica has fallen to the United Provinces and we have a number of exiles and refuges in America who are asking us to go to war with the corrupt United Provinces of Central America. Many within the government are also in favor of using our influence to smash capitalism in the region."
+combinedsyndicates.216.a:0 "America shall Liberate Centroamerica!"
+combinedsyndicates.216.b:0 "We need to focus on America First"
+
+combinedsyndicates.217.t:0 "A Revolution in Cuba?"
+combinedsyndicates.217.d:0 "The Island of Cuba lays under control of corrupt capitalist leaders. The conditions of the Cuban people are horrible and a number of syndicalist leaders have come America seeking our help in supporting a revolution on the Island that can oust the corrupt regime and put the people into power. "
+combinedsyndicates.217.a:0 "Let us help our Cuban Comrades!"
+combinedsyndicates.218.t:0 "Syndicalist Uprising!"
+combinedsyndicates.218.d:0 "Numerous rebel groups have risen up throughout Cuba, notably with exiled syndicalists landing in the Bay of Pigs just 70 kilometers west of the city of Cienfuegos. Many point the finger at the revolutionary Americans for aiding the syndicalists. The Army is marching out to meet the rebel forces but will they be victorious?"
+combinedsyndicates.218.a:0 "The Cuban Revolutionaries are victorious!"
+combinedsyndicates.218.b:0 "The Cuban Army smashes the rebels!"
+combinedsyndicates.219.t:0 "Cuban Revolution is victorious!"
+combinedsyndicates.219.d:0 "We have received word from Cuba that the revolution is successful. A new government by the Cuban People is in Power. One less island in the Caribbean is enslaved by capitalism."
+combinedsyndicates.219.a:0 "Great Work Comrades!"
+combinedsyndicates.220.t:0 "Cuban Revolution has failed"
+combinedsyndicates.220.d:0 "We have received word from Cuba that the revolution has failed. Despite the great valor of our comrades in Cuba, the Army was able to smash them and many are wondering if America should retaliate and smash Capitalism in America ourselves or if we should just let it be for now."
+combinedsyndicates.220.a:0 "We shall go to Cuba and Liberate the Cubans!"
+combinedsyndicates.220.b:0 "It is not worth a war over"
+combinedsyndicates.221.t:0 "Revolutionary Thanks"
+combinedsyndicates.221.d:0 "With our revolution successful. We should work to rebuild the relations with America. While the old regime of America supported the dictators and corrupt presidents, the new revolutionary America has changed tune and working towards supporting the people throughout the Americas. "
+combinedsyndicates.221.a:0 "Gracias Camaradas!"
+
+combinedsyndicates.222.t:0 "A Revolution in Haiti?"
+combinedsyndicates.222.d:0 "The country of Haiti lays under control of corrupt capitalist leaders. The conditions of the Haitian people are horrible and a number of syndicalist leaders have come America seeking our help in supporting a revolution on the country that can oust the corrupt regime and put the people into power. "
+combinedsyndicates.222.a:0 "Let us help our Haitian Comrades!"
+combinedsyndicates.223.t:0 "Syndicalist Uprising!"
+combinedsyndicates.223.d:0 "Numerous rebel groups have risen up throughout Haiti. Many of the old forts built following the Haitian revolution have come under control of the rebels. Many point the finger at the revolutionary Americans for aiding the syndicalists. The Army is marching out to meet the rebel forces but will they be victorious?"
+combinedsyndicates.223.a:0 "The Haitian Revolutionaries are victorious!"
+combinedsyndicates.223.b:0 "The Haitian Army smashes the rebels!"
+combinedsyndicates.224.t:0 "Haitian Revolution is victorious!"
+combinedsyndicates.224.d:0 "We have received word from Haiti that the revolution is successful. A new government by the Haitian People is in Power. One less country in the Caribbean is enslaved by capitalism."
+combinedsyndicates.224.a:0 "Great Work Comrades!"
+combinedsyndicates.225.t:0 "Haitian Revolution has failed"
+combinedsyndicates.225.d:0 "We have received word from Haiti that the revolution has failed. Despite the great valor of our comrades in Haiti, the Army was able to smash them and many are wondering if America should retaliate and smash Capitalism in America ourselves or if we should just let it be for now."
+combinedsyndicates.225.a:0 "We shall go to Haiti and Liberate the Haitians!"
+combinedsyndicates.225.b:0 "It is not worth a war over"
+combinedsyndicates.226.t:0 "Revolutionary Thanks"
+combinedsyndicates.226.d:0 "With our revolution successful. We should work to rebuild the relations with America. While the old regime of America supported the dictators and corrupt presidents, the new revolutionary America has changed tune and working towards supporting the people throughout the Americas. "
+combinedsyndicates.226.a:0 "Merci Camarades!"
+
+combinedsyndicates.227.t:0 "A Revolution in The Dominican Republic?"
+combinedsyndicates.227.d:0 "The country of The Dominican Republic lays under control of corrupt capitalist leaders. The conditions of the Dominican people are horrible and a number of syndicalist leaders have come America seeking our help in supporting a revolution in the The Dominican Republic that can oust the corrupt regime and put the people into power. "
+combinedsyndicates.227.a:0 "Let us help our Dominican Comrades!"
+combinedsyndicates.228.t:0 "Syndicalist Uprising!"
+combinedsyndicates.228.d:0 "Numerous rebel groups have risen up throughout The Dominican Republic, notably with exiled syndicalists landing in the Bay of Pigs just 70 kilometers west of the city of Cienfuegos. Many point the finger at the revolutionary Americans for aiding the syndicalists. The Army is marching out to meet the rebel forces but will they be victorious?"
+combinedsyndicates.228.a:0 "The Dominican Revolutionaries are victorious!"
+combinedsyndicates.228.b:0 "The Dominican Army smashes the rebels!"
+combinedsyndicates.229.t:0 "Dominican Revolution is victorious!"
+combinedsyndicates.229.d:0 "We have received word from The Dominican Republic that the revolution is successful. A new government by the Dominican People is in Power. One less country in the Caribbean is enslaved by capitalism."
+combinedsyndicates.229.a:0 "Great Work Comrades!"
+combinedsyndicates.230.t:0 "Dominican Revolution has failed"
+combinedsyndicates.230.d:0 "We have received word from The Dominican Republic that the revolution has failed. Despite the great valor of our comrades in The Dominican Republic, the Army was able to smash them and many are wondering if America should retaliate and smash Capitalism in America ourselves or if we should just let it be for now."
+combinedsyndicates.230.a:0 "We shall go to The Dominican Republic and Liberate the Dominicans!"
+combinedsyndicates.230.b:0 "It is not worth a war over"
+combinedsyndicates.231.t:0 "Revolutionary Thanks"
+combinedsyndicates.231.d:0 "With our revolution successful. We should work to rebuild the relations with America. While the old regime of America supported the dictators and corrupt presidents, the new revolutionary America has changed tune and working towards supporting the people throughout the Americas. "
+combinedsyndicates.231.a:0 "Gracias Camaradas!"
+
+combinedsyndicates.232.t:0 "A Revolution in Panama?"
+combinedsyndicates.232.d:0 "The country of Panama lays under control of corrupt capitalist leaders. The conditions of the Panamanian people are horrible and a number of syndicalist leaders have come America seeking our help in supporting a revolution in the Panama that can oust the corrupt regime and put the people into power. "
+combinedsyndicates.232.a:0 "Let us help our Dominican Comrades!"
+combinedsyndicates.233.t:0 "Syndicalist Uprising!"
+combinedsyndicates.233.d:0 "Numerous rebel groups have risen up throughout Panama, notably with exiled syndicalists landing in the Bay of Pigs just 70 kilometers west of the city of Cienfuegos. Many point the finger at the revolutionary Americans for aiding the syndicalists. The Army is marching out to meet the rebel forces but will they be victorious?"
+combinedsyndicates.233.a:0 "Panamanian Revolutionaries are victorious!"
+combinedsyndicates.233.b:0 "The Panamanian Army smashes the rebels!"
+combinedsyndicates.234.t:0 "Panamanian Revolution is victorious!"
+combinedsyndicates.234.d:0 "We have received word from Panama that the revolution is successful. A new government by the Panamanian People is in Power. One less country in the Caribbean is enslaved by capitalism."
+combinedsyndicates.234.a:0 "Great Work Comrades!"
+combinedsyndicates.235.t:0 "Panamanian Revolution has failed"
+combinedsyndicates.235.d:0 "We have received word from Panama that the revolution has failed. Despite the great valor of our comrades in Panama, the Army was able to smash them and many are wondering if America should retaliate and smash Capitalism in America ourselves or if we should just let it be for now."
+combinedsyndicates.235.a:0 "We shall go to Panama and Liberate the Panamanians!"
+combinedsyndicates.235.b:0 "It is not worth a war over"
+combinedsyndicates.236.t:0 "Revolutionary Thanks"
+combinedsyndicates.236.d:0 "With our revolution successful. We should work to rebuild the relations with America. While the old regime of America supported the dictators and corrupt presidents, the new revolutionary America has changed tune and working towards supporting the people throughout the Americas. "
+combinedsyndicates.236.a:0 "Gracias Camaradas!"
+
+combinedsyndicates.237.t:0 "Fate of the Canal?"
+combinedsyndicates.237.d:0 "With control of the Canal in our hands the question is now what to do with it. Some suggest that we should give it to Centroamerica, while others suggest that we give it to the Panamanians. While others suggest that we should keep it since it was built by Americans. "
+combinedsyndicates.237.a:0 "Give it to Centroamerica"
+combinedsyndicates.237.b:0 "Give it to Panama"
+combinedsyndicates.237.c:0 "Keep it"
+combinedsyndicates.238.t:0 "America has given us the Canal"
+combinedsyndicates.238.d:0 "The American have given us the canal. This is a great day for people throughout central America. "
+combinedsyndicates.238.a:0 "Gracias Camaradas!"
+combinedsyndicates.239.t:0 "America has given us the Canal"
+combinedsyndicates.239.d:0 "The American have given us the canal. This is a great day for people throughout central America. "
+combinedsyndicates.239.a:0 "Gracias Camaradas!"
