--- a/localisation/KR_Princely_Federation_l_english.yml
+++ b/localisation/KR_Princely_Federation_l_english.yml
@@ -11,6 +11,15 @@ PRF_kashmir_baroda_rises:0 "§YKashmir§! and §YGujarat§! states rise up again
 PRF_orissa_rises:0 "§YOrissa§! state rises up against us!\n"
 PRF_orissa_crushed:0 "The rebels in §YOrissa§! are crushed!\n"
 PRF_unholy_deal:0 "They will contact us when their war with §Y[BHC.GetNameDef]§! begins\n"
+PRF_BHC_convert_faster:0 "Cores will be gained on the §Y[BHC.GetName]§!'s states more quickly\n"
+PRF_BHC_convert_slower:0 "Cores will be gained on the §Y[BHC.GetName]§!'s states more slowly\n"
+PRF_BHC_cores_1:0 "May now gain cores in §YWest Bengal§!, §YEast Bengal§!, and §YBihar§!\n"
+PRF_BHC_cores_2:0 "May now gain cores in §YAssam§! and §YNagaland§!\n"
+PRF_BHC_cores_3:0 "May now gain cores in §YOrissa§! and §YJabalpur§!\n"
+PRF_DEH_convert_faster:0 "Cores will be gained on the §Y[DEH.GetName]§!'s states more quickly\n"
+PRF_DEH_convert_slower:0 "Cores will be gained on the §Y[DEH.GetName]§!'s states more slowly\n"
+PRF_DEH_cores_1:0 "May now gain cores on §Y[DEH.GetName]§!'s northern states\n"
+PRF_DEH_cores_2:0 "May now gain cores on §Y[DEH.GetName]§!'s southern states\n"
 
 ### Ideas ###
 PRF_rule_of_princes_1:0 "Decentralised Rule"
@@ -378,3 +387,46 @@ prf.171.t:0 "Princely India joins [From.GetFactionName]"
 prf.171.d.japan:0 "[From.GetNameDef] accepted our offer to secure Asia for nations of Asia and allowed us to join [From.GetFactionName]!"
 prf.171.d.germany:0 "The Germans are happy to see us joining the common cause to destroy the evil Syndicalists. Now we are part of [From.GetFactionName]!"
 prf.171.d.russia:0 "The Russians state accepted our offer to form a new global alliance! Today a new global alliance has been born that will shape fate of the world!"
+prf.172.t:0 "The Fate of Socialist India's Officer Corps"
+prf.172.d:0 "The Syndicalist threat on the subcontinent has been crushed under the caterpillar tracks of our armoured vehicles. However, some of the commanders who once owed their loyalty to the Calcutta government are willing to give up their political perversions in order to serve Mother India once more. The issue is a dangerous one, given the unforgiving hatred once shared between our two states, and many of our loyal officers deeply resent serving with former enemies."
+prf.172.a:0 "Let the least politically tainted officers have a commission"
+prf.172.b:0 "These men are beyond redemption, lock them away for ever!"
+prf.173.t:0 "The Status of Collectivized Industry in Bengal"
+prf.173.d:0 "Bengal was the most heavily industrialized of all the Calcutta government’s provinces with factories and workshops being run by worker committees subject to the centralized doctrines of the socialist ruling cadres. Since our conquest of the province we have avoided the question of what to do with these industrial behemoths. Should the central government overtake the day to day business of operating the factories, or should we initiate a widespread bout of privatization? Others suggest that we let the local zamindars and princes take control of the complexes, thus taking a moderate stand. Whatever course the national government takes, it is certain to affect the reception our rule will receive from the workers and peasants of the Bengal."
+prf.173.a:0 "Allow private companies to take over the factories"
+prf.173.b:0 "Let the local zamindars and princes operate the industries"
+prf.173.c:0 "The National Government shall asume direct control!"
+prf.174.t:0 "Status of Assam's Nationalized Tea Plantations"
+prf.174.d:0 "A province long renowned for its production of tea, Assam’s massive plantations actually prospered during their decade-long tenure under socialist administration. Having employed thousand upon thousands of locals, the plantations made sure the people of France and the Union of Britain received their fair share of the precious product. Now, however, the fields lay in disrepair. Like most everything else in the late socialist republic, we now have to make a tough decision regarding the future of this business. Should we maintain state control and secure the rights of the farmers and workers of the fields or should we wage complete war against the socialist economic system and uproot this collectivized remnant of the Calcutta government?"
+prf.174.a:0 "Enforce privatization throughout the province! No mercy!"
+prf.174.b:0 "Let the old rural order be revived - with added workers' rights"
+prf.174.c:0 "The National Government must control this vital industry!"
+prf.175.t:0 "The Zamindar Émigrés and the Lay of the Land"
+prf.175.d:0 "When the last civil war began, the revolutionary thugs of Calcutta drove scores of noble and princely families from their homes throughout the eastern provinces. A large part of these emigres consequently came to Hyderabad and formed one of the most militant and reactionary wings of the Council of Princes. Now that we have restored the ancient regimé and stomped out the horrors of socialism, these princes are calling for the disbandment of the collectivized farms and a return to the old rural order of the zamindari (landlord) system. We certainly need to placate the victorious princes within our own government, but a break too sudden with the socialist model could be quite brutal and lead to much suffering amongst our new subjects. The nation awaits the cabinet’s decision."
+prf.175.a:0 "The old rural order shall be restored in full!"
+prf.175.b:0 "We must compromise for the future of India"
+prf.176.t:0 "Control Asserted in [new_core.GetName]"
+prf.176.d:0 "While it has been difficult to wean the locals away from their socialist beliefs and their former reliance on collectivized industry and agriculture, the state of [new_core.GetName] can finally be called a true part of [Root.GetNameDef]!"
+prf.176.a:0 "It's about time!"
+prf.177.t:0 "Resistance in [damage_state.GetName]!"
+prf.177.d:0 "Protests in the formerly-syndicalist state of [damage_state.GetName] have grown increasingly violent as of late, spurred on by what we believe to be a resistance group operating out of remote regions in the territory. Multiple terrorist bombings have accompanied the protests, and will likely continue until we fully assert control over [damage_state.GetName]'s people."
+prf.177.a:0 "Why can't they see reason?!"
+prf.178.t:0 "The Case of the Delhi Government's Officer Corps"
+prf.178.d:0 "The National Government has finally dislodged the last vestiges of British influence on the Indian sub-continent and enforced a truly native system of governance on the troublesome north-western provinces. Some of the officers who once swore loyalty to the Delhi Government have expressed wishes to continue to serve Mother India, placing the nation above political alignment. However, if we enroll these men we might face trouble from our own officers who resent serving alongside former enemies."
+prf.178.a:0 "The Nation needs every single man!"
+prf.178.b:0 "We have no need for British lapdogs!"
+prf.179.t:0 "The Fate of the Loyalist Princely States"
+prf.179.d:0 "When Osman Ali Khan rallied the southern princes behind the National Government, not all of India’s native royalty rose to support him. A great deal of the northern princely states decided to throw their lot in with Ganga Singh and his Dominion government. Now that we finally have vanquished the traitorous government, we are left with the question of what to do with these princes. Either we let them retain their thrones or we forcibly depose them and install lesser royal houses more loyal to our government. The latter course could, however, lead to a lasting resentment and prolong the time it will take to completely win the fealty of our new provinces."
+prf.179.a:0 "Depose the most pro-British princes and install cadet branches!"
+prf.179.b:0 "We must extend the olive branch to all of India's princes!"
+prf.180.t:0 "Restructuring the Civilian Provinces of the North-East"
+prf.180.d:0 "What the Delhi government lacked in princely strength it made up for in ridiculous pampering to its civilian citizens. Merchants, traders and even workers all had a certain degree of personal liberty and say in the day to day running of the state. With the establishment of solid native principles in their old government’s provinces, the masses are concerned that they might be cut off from any political influence or civil liberties in the times to come. If we were to address some of the issues concerned, such as the merchants’ wishes for easy access to foreign trade, we might be able to ensure the transition from traitor to patriot rule go a lot smoother."
+prf.180.a:0 "A new order arises on the Indus! Let the masses tremble"
+prf.180.b:0 "Win over the merchant classes by promising better trade rights"
+prf.180.c:0 "We pledge to respect the civil liberties of the provinces!"
+prf.181.t:0 "Control Asserted in [new_core.GetName]"
+prf.181.d:0 "While it has been difficult to wean the locals away from their over-dependance on British handouts and democratic coddling, the state of [new_core.GetName] has been assimilated can finally be called a true part of [Root.GetNameDef]!"
+prf.181.a:0 "It's about time!"
+prf.182.t:0 "Resistance in [damage_state.GetName]!"
+prf.182.d:0 "Protests in the formerly British-puppet state of [damage_state.GetName] have grown increasingly violent as of late, spurred on by what we believe to be a democratic resistance group operating out of remote regions in the territory. Multiple terrorist bombings have accompanied the protests, and will likely continue until we fully assert control over [damage_state.GetName]'s people."
+prf.182.a:0 "This is what they call 'freedom'?!"
